2012-02-22 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Check for ICE library (fix #670434).

	* src/core/na-gtk-utils.c:
	* src/core/na-gtk-utils.h (na_gtk_utils_find_widget_by_type): Remove no
	more used function.

	* src/core/na-ioptions-list.c (radio_button_create_group): Directly pack
	radio buttons inside of the GtkVBox parent container.

2012-02-20 Pierre Wieser <pwieser@trychlos.org>

	* src/plugin-tracker/Makefile.am:
	* src/utils/Makefile.am: Do not distribute D-Bus auxiliary files.

	* docs/reference/nautilus-actions-sections.txt: Add undocumented enum.

	* docs/reference/Makefile.am: Remove useless rules.

	* run-autogen.sh:
	* run-distcheck.sh: Replace srcdir with top_srcdir.

2012-02-17 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-ioption.c (get_ioption_data):
	* src/nact/base-isession.c (get_isession_data):
	* src/nact/base-isession.h:
	* src/nact/base-iunique.c (get_iunique_data):
	* src/nact/base-iunique.h: Minor cosmetic changes.

2012-02-16 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-menubar.h (nact_menubar_is_level_zero_order_changed):
	Remove unexisting function.

	* src/io-desktop/Makefile.am:
	* src/io-xml/Makefile.am: Do not override uninstall rules.

	* src/plugin-tracker/Makefile.am: Always build and distribute all flavors
	of D-Bus sources.

2012-02-15 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-ischemes-tab.c (on_main_selection_changed):
	* src/nact/nact-imimetypes-tab.c (on_main_selection_changed):
	* src/nact/nact-ifolders-tab.c (on_main_selection_changed):
	* src/nact/nact-icapabilities-tab.c (on_main_selection_changed):
	* src/nact/nact-ibasenames-tab.c (on_main_selection_changed):
	Enable the tab if a context is available.

	* src/nact/nact-iproperties-tab.c (on_main_selection_changed):
	* src/nact/nact-iexecution-tab.c (on_main_selection_changed):
	* src/nact/nact-ienvironment-tab.c (on_main_selection_changed):
	* src/nact/nact-icommand-tab.c (on_main_selection_changed):