@@ -2,6 +2,8 @@
 
 	* configure.ac: Check for ICE library (fix #670434).
 
+	* docs/reference/na-compiling.xml: Updated accordingly.
+
 	* src/core/na-gtk-utils.c:
 	* src/core/na-gtk-utils.h (na_gtk_utils_find_widget_by_type): Remove no
 	more used function.
